SourceMetaData/src/objects/Finance_Line_Item__c.object
<CustomObject>
    <description>An object to store individual Line Items on a Finance Ticket</description>
    <fields>
        <fullName>Account_Description__c</fullName>
        <description>A description the account that is associated with the finance line item record</description>
        <inlineHelpText>A description the account that is associated with the finance line item record</inlineHelpText>
        <label>Account Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Adjustment__c</fullName>
        <description>The finance adjustment that this line item record corresponds to.</description>
        <inlineHelpText>The finance adjustment that this line item record corresponds to.</inlineHelpText>
        <label>Finance Adjustment</label>
        <referenceTo>Ticket__c</referenceTo>
        <relationshipLabel>Finance Line Items</relationshipLabel>
        <relationshipName>Finance_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of the financial line item</description>
        <inlineHelpText>The type of the financial line item</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Virement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget Load</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Code Modification</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Finance Line Item</label>
    <nameField>
        <displayFormat>Line{00000000}</displayFormat>
        <label>Finance Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Finance Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>